# SQLiteTUI

./: Cargo.toml  LICENSE  README.md  ako.db  ano.db  asas.db  asmsids.db  bshdsd.db  dbsud.db  dnidf.db  dnjdsn.db  dnsd.db  dnsjd.db  dnusd.db  dsd.db  dsdn.db  dsds.db  dsjdn.db  dsk.db  dsnd.db  dsndk.db  dsnk.db  dsnkd.db  dsns.db  firma.db  inedf.db  juspd.db  mkdfkd.db  ndjdf.db  ndjnfjd.db  ndjsk.db  nds.db  ndsd.db  njdfndf.db  njn.db  nsdjdn.db  sanksa.db  sdnskds.db  sds.db  shaus.db  (+4 more)
src/: app.rs  components.rs  database.rs  main.rs  test.sqbpro  tui.rs  ui.rs  utils.rs
src/components/: alter_table.rs  mod.rs  modify_table.rs  select_table.rs  tree.rs  update_table.rs  view_table.rs
src/models/: args.rs
src/ui/: popup.rs  test.rs
src/utils/: binary_search.rs  fuzzy_search.rs  leetcode.rs  mod.rs  scroll_state.rs
