[package]
name = "litelens-tui"
version = "0.1.0"
edition = "2021"

[dependencies]
crossterm = "0.27.0"
ratatui = "0.29.0"
serde = { version = "1.0.204" , features = ["derive"] }
serde_json = "1.0.121"
rusqlite = { version = "0.32.0", features = ["bundled"] }
tokio = {version = "1.39.2", features = ["full"] }
tui-popup = "0.4.5"
clap = { version = "4.5.18", features = ["derive"] }
regex = "1.11.0"
